Fix alignment after enhanced images wrapped picture

--- a/src/app.css
+++ b/src/app.css
@@ -5,3 +5,8 @@
 body {
 	background-color: #ffc627; /* Replace with your desired color */
 }
+
+picture {
+	display: flex;
+	justify-content: center;
+}
